[package]
name = "tokenproject"
version = "0.1.0"
authors = ["Mrukant Popat <mrukant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitter-stream = "0.9.0"
serde = "1"
tweetust = "0.9"
rustc-serialize = "0.3"
regex = "0.1.80"
piston_window = "0.105.0"
#plotters = "0.2.8"
plotters = {version = "0.2.8", default_features = false, features = ["piston"]}
serde_json = "1"
twitter-stream-message = "0.3.0"
